Add Index code-behind and mess with component CSS

--- a/BlazorApp3/Pages/Counter.razor
+++ b/BlazorApp3/Pages/Counter.razor
@@ -7,4 +7,4 @@
 <p role="status">Current count: @(CounterState == null ? 0 : CounterState.CurrentCount.ToString())</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-<button class="btn btn-primary" @onclick="CounterAlert">Collocation Test</button>
+<button class="btn btn-primary special-button" @onclick="CounterAlert">Collocation Test</button>
