--- a/BlazorApp3/Pages/FetchData.razor
+++ b/BlazorApp3/Pages/FetchData.razor
@@ -1,11 +1,6 @@
-﻿@page "/fetchdata"
-
-<PageTitle>Weather forecast</PageTitle>
-
+﻿<PageTitle>Weather forecast</PageTitle>
 <h1>Weather forecast</h1>
-
 <p>This component demonstrates fetching data from the server.</p>
-
 @if (forecasts == null)
 {
     <p><em>Loading...</em></p>
