--- a/BlazorApp3/Pages/Index.razor
+++ b/BlazorApp3/Pages/Index.razor
@@ -1,11 +1,5 @@
-﻿@page "/"
-
-<PageTitle>Index</PageTitle>
-
+﻿<PageTitle>Index</PageTitle>
 <h1>Hello, world!</h1>
-
 Welcome to your new app.
-
 <SurveyPrompt Title="How is Blazor working for you?" />
-
 <button class="btn btn-primary" @onclick="JsAlert">Alert</button>
